# restplace

./: README.md  config.py  pyproject.toml
Environment/: environment.py  main.py  state.py
Organism/: __init__.py  main.py  organism.py  sensory_input.py
Organism/neural_network/: brain.py  connection.py  gene.py  neuron.py
Organism/neural_network/actions/: __init__.py  action.py  computation.py
Selection/: __init__.py  main.py
Selection/strategies/: position.py
utils/: types.py
